--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -7,21 +7,30 @@
 
 html,
 body {
-  max-width: 100vw;
+  width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
+  color: floralwhite;
+  backgroundcolor: black;
 }
 
-body {
-  color: indigo;
-  backgroundcolor: black;
+main {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  min-width: 100%;
+  min-height: 100vh;
+  overflow-x: hidden;
+  margin: 0 0.4rem;
 }
 
 footer {
   position: relative;
   color: floralwhite;
+  background: rgb(14 4 0);
   text-align: end;
   padding: 2.8rem;
-  right: 0.9rem;
 }
 
 a {
