--- a/client/src/app/test/page.module.css
+++ b/client/src/app/test/page.module.css
@@ -1,8 +1,8 @@
 .main {
   display: flex;
-  flex-grow: 1;
+  grow: 1;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  margin: auto;
+  padding: 0.2rem;
 }
