--- a/client/src/app/test/page.module.css
+++ b/client/src/app/test/page.module.css
@@ -1,8 +1,21 @@
-.main {
+.page_layout {
   display: flex;
-  grow: 1;
+  flex-grow: 1;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 0.2rem;
+  margin: auto;
+  padding: 1rem;
+}
+
+.page_title {
+}
+
+.content {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
